[package]
name = "stellar-relay-lib"
version = "1.0.11"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "stellar_relay_lib"
path = "src/lib.rs"

[dev-dependencies]
ntest = "0.9.0"
serial_test = "0.9.0"
wallet = { path = "../wallet", features = ["testing-utils"] }
console-subscriber = { version = "0.3.0" }

[dependencies]

hex = "0.4.3"
tracing = { version = "0.1", features = ["log"] }

base64 = "0.13.0"
rand = "0.8.5"
tweetnacl = "0.4.0"

hmac = "0.12.1"
sha2 = "0.10.2"

serde = { version = "1.0.152", features = ["alloc"] }
serde_json = "1.0.93"
serde_with = "2.2.0"


substrate-stellar-sdk = {git = "https://github.com/pendulum-chain/substrate-stellar-sdk", branch = "polkadot-v1.1.0", default-features = false, features = ['all-types']}

err-derive = "0.3.1"

tokio = { version = "1.37", features = [
    "macros",           # allows main function to be async
    "rt-multi-thread",  # for multi-thread runtime
    "sync",             # to make channels available
    "time",             # for timeouts and sleep, when reconnecting
    "tracing"           # for tokio console
] }
async-std = { version = "1.12.0", features = ["attributes"] }

[features]
std = [
    "substrate-stellar-sdk/std"
]
default = [
    "std"
]
