[package]
authors = ["Pendulum Chain <https://github.com/pendulum-chain>"]
description = "The Vault client intermediates between Stellar and the Spacewalk Parachain."
edition = "2018"
name = "vault"
version = "1.0.2"

[features]
std = [
    "stellar-relay-lib/std"
]

integration = [
    "wallet/testing-utils"
]
standalone-metadata = ["runtime/standalone-metadata"]
parachain-metadata-pendulum = ["runtime/parachain-metadata-pendulum"]
parachain-metadata-amplitude = ["runtime/parachain-metadata-amplitude"]
parachain-metadata-foucoco = ["runtime/parachain-metadata-foucoco"]
integration-test = ["runtime/standalone-metadata", "integration"]

[dependencies]
async-trait = "0.1.40"
base64 = { version = '0.13.0', default-features = false, features = ['alloc'] }
bincode = "1.3.3"
clap = "3.1"
rand = "0.8.5"
futures = "0.3.5"
governor = "0.5.0"
hex = "0.4.2"
itertools = "0.10.5"
lazy_static = "1.4"
nonzero_ext = "0.3.0"
parity-scale-codec = "3.0.0"
reqwest = { version = "0.11", features = ["json"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = "1.0.136"
serde_json = { version = '1.0.45', default-features = false, features = ['alloc'] }
sha2 = "0.8.2"
signal-hook = "0.3.14"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
sysinfo = "0.26.1"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-metrics = { version = "0.1.0", default-features = false }
tokio-stream = { version = "0.1.9", features = ["sync"] }

tracing = { version = "0.1", features = ["log"] }
tracing-futures = { version = "0.2.5" }
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter", "fmt"] }

jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0", features = ["http", "tls"] }

# Workspace dependencies
runtime = { path = "../runtime" }
service = { path = "../service" }
wallet = { path = "../wallet" }
stellar-relay-lib = { package = "stellar-relay-lib", path = "../stellar-relay-lib", default-features = false }
primitives = { path = "../../primitives", package = "spacewalk-primitives", default-features = false }

# Substrate dependencies
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }

parking_lot = "0.12.1"
err-derive = "0.3.1"
flate2 = "1.0"

[dev-dependencies]
mockall = "0.8.1"
ntest = "0.9.0"

env_logger = "0.9.0"
serial_test = "0.9.0"
tempdir = "0.3.7"

# Workspace dependencies
runtime = { path = "../runtime", features = ["testing-utils"] }
wallet = { path = "../wallet", features = ["testing-utils"] }
subxt = { version = "0.25.0" }

# Substrate dependencies
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
