[package]
authors = ["Pendulum Chain <https://github.com/pendulum-chain>"]
description = "The Vault client intermediates between Stellar and the Spacewalk Parachain."
edition = "2018"
name = "vault"
version = "1.0.13"

[features]
std = [
    "stellar-relay-lib/std"
]

integration = [
    "rand",
    "wallet/testing-utils"
]
standalone-metadata = ["runtime/standalone-metadata"]
parachain-metadata-pendulum = ["runtime/parachain-metadata-pendulum"]
parachain-metadata-amplitude = ["runtime/parachain-metadata-amplitude"]
parachain-metadata-foucoco = ["runtime/parachain-metadata-foucoco"]
integration-test = ["integration", "standalone-metadata"]
allow-debugger = ["console-subscriber"]


[dependencies]
async-trait = "0.1.40"
base64 = { version = '0.13.0', default-features = false, features = ['alloc'] }
bincode = "1.3.3"
clap = { version = "3.1", features = ["env"] }
cfg-if = "1.0.0"
rand = { version = "0.8.5", optional = true }
futures = "0.3.5"
governor = "0.5.0"
hex = "0.4.2"
itertools = "0.10.5"
lazy_static = "1.4"
nonzero_ext = "0.3.0"
reqwest = { version = "0.12.4", features = ["json"] }
signal-hook = "0.3.14"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
sysinfo = "0.26.1"
thiserror = "1.0"

# tokio related
tokio = { version = "1.37", features = ["full", "tracing"] }
tokio-metrics = { version = "0.1.0", default-features = false }
tokio-stream = { version = "0.1.9", features = ["sync"] }
console-subscriber = { version = "0.2.0", optional = true }

tracing = { version = "0.1", features = ["log"] }

jsonrpc-core-client = { version = "18.0.0", features = ["http", "tls"] }

subxt = { version = "0.33.0", features = [ "substrate-compat"] }

# Workspace dependencies
runtime = { path = "../runtime" }
service = { path = "../service" }
wallet = { path = "../wallet" }
stellar-relay-lib = { package = "stellar-relay-lib", path = "../stellar-relay-lib", default-features = false }
primitives = { path = "../../primitives", package = "spacewalk-primitives", default-features = false }

# Substrate dependencies
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }

parking_lot = "0.12.1"
flate2 = "1.0"

[dev-dependencies]
mockall = "0.8.1"
ntest = "0.9.0"

env_logger = "0.9.0"
serial_test = "0.9.0"
tempdir = "0.3.7"

# Workspace dependencies
runtime = { path = "../runtime", features = ["testing-utils", "standalone-metadata"] }
wallet = { path = "../wallet", features = ["testing-utils"] }

sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-arithmetic = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }

# Substrate dependencies
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
