[package]
authors = ["Pendulum Chain <https://github.com/pendulum-chain>"]
edition = "2021"
name = "wallet"
version = "1.0.0"

[features]
default = []
testing-utils = []

[dependencies]
async-trait = "0.1.40"
futures = "0.3.5"
parity-scale-codec = "3.0.0"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.136"
serde_json = { version = '1.0.45', default-features = false, features = ['alloc'] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-metrics = { version = "0.1.0", default-features = false }
tokio-stream = { version = "0.1.9", features = ["sync"] }
tracing = { version = "0.1", features = ["log"] }
tracing-futures = { version = "0.2.5" }
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter", "fmt"] }
primitives = { package = "spacewalk-primitives", path = "../../primitives"}

[dev-dependencies]
mockall = "0.8.1"
serial_test = "0.9.0"
mocktopus = "0.8.0"
