[package]
authors = ["Pendulum Chain <https://github.com/pendulum-chain>"]
description = "Spacewalk bridge pallet"
edition = "2021"
homepage = "https://pendulumchain.org/"
license = "Unlicense"
name = "pallet-spacewalk"
publish = false
repository = "https://github.com/pendulum-chain/spacewalk"
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
base64 = {version = '0.13.0', default-features = false, features = ['alloc']}
codec = {package = "parity-scale-codec", version = "3.0.0", default-features = false}
hex = {version = "0.4", default-features = false}
log = {version = "0.4.14", default-features = false}
scale-info = {version = "2.1.1", default-features = false, features = ["derive"]}
serde = {version = '1.0.100', default-features = false, features = ['derive']}
serde_json = {version = '1.0.45', default-features = false, features = ['alloc']}

# Substrate packages
frame-benchmarking = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18", optional = true}
frame-support = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18"}
frame-system = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18"}
sp-arithmetic = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18"}
sp-core = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18"}
sp-io = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18"}
sp-keystore = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18", optional = true}
sp-runtime = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18"}
sp-std = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18"}

# ORML dependencies - commit aac79b3b31953381669a2ffa9b3e9bfe48e87f38 is where polkadot-v0.9.18 dependencies are used (branch does not exist for it)
orml-traits = {git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "2b5d4ce1d08fb54c0007c2055653892d2c93a92e", default-features = false}

pallet-transaction-payment = {git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18"}
stellar-support = { path = "../stellar", default-features = false}

[dev-dependencies]
spacewalk-runtime-standalone = {package = "interbtc-runtime-standalone", path = "../../standalone/runtime", default-features = false}

[features]
default = ["std"]
std = [
  "frame-benchmarking/std",
  "frame-support/std",
  "frame-system/std",
  "codec/std",
  "scale-info/std",
  "pallet-transaction-payment/std",
  "log/std",
  "sp-arithmetic/std",
  "sp-io/std",
  "sp-core/std",
  "sp-keystore/std",
  "sp-runtime/std",
  "sp-std/std",
  'orml-traits/std',
  'base64/std',
  'stellar-support/std',
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
