[package]
name = "clients-info"
authors = ["Pendulum Chain <https://github.com/pendulum-chain>"]
version = "1.0.16"
edition = "2021"

[dependencies]
codec = { workspace = true, features = ["derive", "max-encoded-len"]}
scale-info = {workspace = true, features = ["derive"]}

# Substrate dependencies
sp-std = { workspace = true, optional = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }

[dev-dependencies]
sp-core = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true}

[features]
default = [ "std" ]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-std?/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-std",
]

try-runtime = [ "frame-support/try-runtime", "frame-system/try-runtime" ]
