[package]
authors = ["Pendulum"]
description = "Currency module"
edition = "2021"
homepage = "https://pendulumchain.org"
name = "currency"
version = "1.0.15"

[dependencies]
codec = { workspace = true, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true, features = ["derive"] }

sp-std = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }

# Parachain dependencies
primitives = { package = "spacewalk-primitives", path = "../../primitives", default-features = false }

# Orml dependencies
orml-tokens = { workspace = true }
orml-currencies = { workspace = true }
orml-traits = { workspace = true }

# for other pallets wanting to mock functions
mocktopus = { workspace = true, optional = true }

[dev-dependencies]
sp-core = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true}
sp-arithmetic = { workspace = true, default-features = true }
pallet-balances = { workspace = true, default-features = true }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"orml-currencies/std",
	"orml-tokens/std",
	"orml-traits/std",
	"pallet-balances/std",
	"primitives/std",
	"scale-info/std",
	"sp-std/std",
]
testing-utils = [ "mocktopus" ]
# This feature has to be separate from the testing-utils feature because combining them causes the 'duplicate lang item' error
# when compiling the testchain runtime
testing-constants = []

try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"orml-currencies/try-runtime",
	"orml-tokens/try-runtime",
	"pallet-balances/try-runtime",
]
# This feature is only used for defining `GetWrappedCurrencyId` config parameter in the runtime
# `GetWrappedCurrencyId` is only used in other pallets' benchmarks
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"orml-tokens/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
]
