[package]
authors = ["Pendulum Chain <https://github.com/pendulum-chain>"]
description = "Fee module"
edition = "2021"
name = "fee"
version = "1.0.12"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }

# Substrate dependencies
sp-arithmetic = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }

frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false, optional = true }

# Parachain dependencies
currency = { path = "../currency", default-features = false }
security = { path = "../security", default-features = false }
pooled-rewards = { path = "../pooled-rewards", default-features = false }
staking = { path = "../staking", default-features = false }
reward-distribution = { path = "../reward-distribution", default-features = false }

primitives = { package = "spacewalk-primitives", path = "../../primitives", default-features = false }


[dev-dependencies]
mocktopus = "0.8.0"
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }

currency = { path = "../currency", features = ["testing-constants"] }
security = { path = "../security", features = ['testing-utils'] }
oracle = { path = "../oracle" }

# Orml dependencies
orml-currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0" }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0" }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0" }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "sp-arithmetic/std",
    "sp-std/std",
    "frame-support/std",
    "frame-system/std",
    "currency/std",
    "security/std",
    "staking/std",
    "primitives/std",
    "pooled-rewards/std",
    "orml-currencies/std",
    "orml-tokens/std",
    "orml-traits/std",
    "reward-distribution/std",
    "oracle/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "currency/runtime-benchmarks",
    "currency/testing-constants"
]

try-runtime = [
    "frame-system/try-runtime",
    "currency/try-runtime",
    "pallet-balances/try-runtime",
    "security/try-runtime",
    "staking/try-runtime",
    "pooled-rewards/try-runtime",
    "orml-currencies/try-runtime",
    "orml-tokens/try-runtime",
    "reward-distribution/try-runtime",
    "oracle/try-runtime",
]
