[package]
authors = ["Pendulum Chain <https://github.com/pendulum-chain>"]
description = "Fee module"
edition = "2021"
name = "fee"
version = "1.0.13"

[dependencies]
codec = { workspace = true, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true, features = ["derive"] }

# Substrate dependencies
sp-arithmetic = { workspace = true }
sp-std = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }

# Parachain dependencies
currency = { path = "../currency", default-features = false }
security = { path = "../security", default-features = false }
pooled-rewards = { path = "../pooled-rewards", default-features = false }
staking = { path = "../staking", default-features = false }
reward-distribution = { path = "../reward-distribution", default-features = false }

primitives = { package = "spacewalk-primitives", path = "../../primitives", default-features = false }


[dev-dependencies]
frame-benchmarking = {  workspace = true, default-features = true }
pallet-balances = { workspace = true, default-features = true }
pallet-timestamp = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }

currency = { path = "../currency", features = ["testing-constants"] }
security = { path = "../security", features = ['testing-utils'] }
oracle = { path = "../oracle" }

# Orml dependencies
orml-currencies = { workspace = true, default-features = true }
orml-tokens = { workspace = true, default-features = true }
orml-traits = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "sp-arithmetic/std",
    "sp-std/std",
    "frame-support/std",
    "frame-system/std",
    "currency/std",
    "security/std",
    "staking/std",
    "primitives/std",
    "pooled-rewards/std",
    "orml-currencies/std",
    "orml-tokens/std",
    "orml-traits/std",
    "reward-distribution/std",
    "oracle/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "currency/runtime-benchmarks",
    "currency/testing-constants"
]

try-runtime = [
    "frame-system/try-runtime",
    "currency/try-runtime",
    "pallet-balances/try-runtime",
    "security/try-runtime",
    "staking/try-runtime",
    "pooled-rewards/try-runtime",
    "orml-currencies/try-runtime",
    "orml-tokens/try-runtime",
    "reward-distribution/try-runtime",
    "oracle/try-runtime",
]
